# openfhe-julia

./: .gitignore  .typos.toml  .zenodo.json  CITATION.bib  CMakeLists copy.txt  CMakeLists.txt  LICENSE.md  README.md  VERSION  apple-fix-cmake-typeinfo-int128.patch  development.md
.github/workflows/: SpellCheck.yml  ci.yml
include/openfhe_julia/: auxiliary.h  biginteger.h  ccparams.h  ciphertextimpl.h  cryptocontextbfvrns.h  cryptocontextbgvrns.h  cryptocontextckksrns.h  cryptocontextfactory.h  cryptocontextimpl.h  cryptocontextproxy.h  cryptoobject.h  dcrtpoly.h  decryptresult.h  encodingparamsimpl.h  enums.h  fheckksrns.h  ildcrtparams.h  jlcxx_modified.h  jlcxx_parameters.h  keypair.h  nativeinteger.h  params.h  plaintext.h  plaintextimpl.h  privatekeyimpl.h  publickeyimpl.h  serial.h  serializable.h  stl_modified.h  ubint.h
src/: auxiliary.cpp  biginteger.cpp  ccparams.cpp  ciphertextimpl.cpp  cryptocontextbfvrns.cpp  cryptocontextbgvrns.cpp  cryptocontextckksrns.cpp  cryptocontextfactory.cpp  cryptocontextimpl.cpp  cryptoobject.cpp  dcrtpoly.cpp  decryptresult.cpp  encodingparamsimpl.cpp  enums.cpp  fheckksrns.cpp  ildcrtparams.cpp  keypair.cpp  main.cpp  nativeinteger.cpp  openfhe_julia.cpp  params.cpp  plaintext.cpp  plaintextimpl.cpp  privatekeyimpl.cpp  publickeyimpl.cpp  serial.cpp  serializable.cpp  ubint.cpp
test/: .gitignore  LocalPreferences.toml.tmpl  init.jl  test.jl  test_clang.cpp
test/MyOpenFHE.jl/: Project.toml
test/MyOpenFHE.jl/src/: MyOpenFHE.jl
